[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.10"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
serde = {version ="1.0.217", features=["derive"]}
utoipa = {version= "5.3.1",features=["axum_extras"]}
utoipa-swagger-ui = {version="8.1.1",features=["axum"]}
tower-http = {version="0.6.2",features=["fs"]}
serde_json = "1.0.134"

[dev-dependencies]
anyhow= "1"
httpc-test = "0.1.2"
